[gd_scene load_steps=18 format=2]

[ext_resource path="res://Resouces/Particles/SmallPoint.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Ghost/GhostBullet.gd" type="Script" id=2]
[ext_resource path="res://Resouces/Particles/Smoke2.png" type="Texture" id=3]
[ext_resource path="res://Resouces/ShaderTextures/Shader_Texture_9.png" type="Texture" id=4]
[ext_resource path="res://Enemies/particleShader.tres" type="Shader" id=5]

[sub_resource type="PhysicsMaterial" id=7]
absorbent = true

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0.283871, 0.406452, 0.470968, 0.535484, 0.658065, 0.729032 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.4, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.290323 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="OpenSimplexNoise" id=13]
octaves = 4
period = 0.1
persistence = 0.35
lacunarity = 0.74

[sub_resource type="NoiseTexture" id=14]
width = 64
height = 64
seamless = true
noise = SubResource( 13 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 5 )
shader_param/scorll1 = Vector2( 0.019, 0.045 )
shader_param/scorll2 = Vector2( 1.556, -0.785 )
shader_param/gradient = SubResource( 9 )
shader_param/texture1 = SubResource( 14 )
shader_param/texture2 = ExtResource( 4 )

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.447727 ), -0.809091, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.6
scale_random = 0.5
scale_curve = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[sub_resource type="Animation" id=5]
resource_name = "Pop"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Trail:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("SmallPoint:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Trail:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SmallPoint:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="GhostBullet" type="RigidBody2D"]
modulate = Color( 0.517647, 0.960784, 0.690196, 1 )
collision_layer = 64
collision_mask = 3
physics_material_override = SubResource( 7 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="SmallPoint" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Trail" type="Particles2D" parent="."]
material = SubResource( 12 )
amount = 6
lifetime = 0.3
local_coords = false
draw_order = 1
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="OrphanTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="PopAnimator" type="AnimationPlayer" parent="."]
anims/Pop = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Explosion" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_GhostBullet_body_entered"]
[connection signal="timeout" from="OrphanTimer" to="." method="_on_OrphanTimer_timeout"]
